MDEV-15743 Avoid a PFS warning by shortening key name for proxy protocol rwlock